--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
     height: 700px;
     position: relative;
     margin:100px 50px;
-    background-image: url("images/bg-pattern-top.svg");
-    background-image: url("images/bg-pattern-bottom.svg");
+    background-image: url("bg-pattern-top.svg");
+    background-image: url("bg-pattern-bottom.svg");
 }
 .card{
     background-color: white;
