--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     font-size: 18px;
     font-family: 'Kumbh Sans', sans-serif;
    background-color:rgb(56, 170, 170);
-    background-image: url("images/bg-pattern-top.svg");
-    background-image: url("images/bg-pattern-bottom.svg");
+    background-image: url("bg-pattern-top.svg");
+    background-image: url("bg-pattern-bottom.svg");
     position: relative;
     display: flex;
     justify-content: center;
